TPLKEENLY-207 #resolve alignment buy now

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -2047,7 +2047,6 @@ body {
             display: table;
             .wrapper-submenu-items {
                 padding-left: 40px;
-                display: table-cell;
                 vertical-align: middle;
                 .menu {
                     &.nav-list {
@@ -2110,18 +2109,18 @@ body {
                 }
             }
             .total-menu-inner {
-                height: 1px;
                 .moduletable {
-                    position: absolute;
                     bottom: 0;
-                    font-family: @serifFontFamily;
-                    text-transform: uppercase;
                     color: @color-five;
-                    font-size: @baseFontSize + 2;
-                    margin: 0 auto;
-                    left: 0;
-                    right: 0;
                     display: block;
+                    font-family: @serifFontFamily;
+                    font-size: @baseFontSize + 2;
+                    left: 0;
+                    margin: 0 auto;
+                    position: absolute;
+                    right: 0;
+                    text-align: center;
+                    text-transform: uppercase;
                 }
                 .btn {
                     border-color: @color-five;
